@@ -672,6 +672,14 @@ public class LedgerHandle {
 
         // avoid parallel ensemble changes to same ensemble.
         synchronized (metadata) {
+            if (!metadata.currentEnsemble.get(bookieIndex).equals(addr)) {
+                // ensemble has already changed, failure of this addr is immaterial
+                LOG.warn("Write did not succeed to {}, bookieIndex {}, but we have already fixed it.",
+                         addr, bookieIndex);
+                blockAddCompletions.decrementAndGet();
+                return;
+            }
+
             try {
                 newBookie = bk.bookieWatcher
                         .getAdditionalBookie(metadata.currentEnsemble);
